Fixed image paths for deployment

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
               <button class="btn btn-primary btn-lg">Get started</button>
             </div>
             <img
-              src="./asset/travel.jpg"
+              src="travel.jpg"
               alt="image"
               class="w-50 rounded d-none d-md-block"
             />
@@ -75,7 +75,7 @@
         <div class="row">
           <div class="col-md-4 mb-4">
             <img
-              src="./asset/ai.jpg"
+              src="ai.jpg"
               alt="AI suggestion"
               class="img-fluid rounded border border-4 border-primary mb-3 feature-img"
             />
@@ -86,7 +86,7 @@
           </div>
           <div class="col-md-4 mb-4">
             <img
-              src="./asset/friend.jpg"
+              src="friend.jpg"
               alt="Collaboration"
               class="img-fluid rounded border border-4 border-primary mb-3 feature-img"
             />
@@ -97,7 +97,7 @@
           </div>
           <div class="col-md-4 mb-4">
             <img
-              src="./asset/sten-ritterfeld-jDfgqieEVJQ-unsplash.jpg"
+              src="sten-ritterfeld-jDfgqieEVJQ-unsplash.jpg"
               alt="offline use"
               class="img-fluid rounded border border-4 border-primary mb-3 feature-img"
             />
