--- a/index.html
+++ b/index.html
@@ -19,6 +19,9 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
+    <div class="container-fluid">
+      
+    </div>
     <!-- NAVBAR  -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark text-light">
       <div class="container">
@@ -97,7 +100,7 @@
           </div>
           <div class="col-md-4 mb-4">
             <img
-              src="sten-ritterfeld-jDfgqieEVJQ-unsplash.jpg"
+              src="sten-ritterfeld-jDfgqieEVJQ-unsplash (1).jpg"
               alt="offline use"
               class="img-fluid rounded border border-4 border-primary mb-3 feature-img"
             />
@@ -135,7 +138,7 @@
                 minutes.
               </p>
             </div>
-            <button class="btn btn-outline-light btn-lg">Start Planning</button>
+            <button class="btn btn-outline-light btn-lg mt-5">Start Planning</button>
           </div>
         </div>
       </section>
