--- a/index.html
+++ b/index.html
@@ -19,9 +19,7 @@
     <link rel="stylesheet" href="index.css" />
   </head>
   <body>
-    <div class="container-fluid">
-      
-    </div>
+    
     <!-- NAVBAR  -->
     <nav class="navbar navbar-expand-lg bg-dark navbar-dark text-light">
       <div class="container">
@@ -94,7 +92,7 @@
               class="img-fluid rounded border border-4 border-primary mb-3 feature-img"
             />
             <p class="small">
-              Collaborative trip planning with friends—vote, comment, and build
+              Collaborative trip planning with friends vote, comment, and build
               your perfect itinerary together.
             </p>
           </div>
@@ -105,7 +103,7 @@
               class="img-fluid rounded border border-4 border-primary mb-3 feature-img"
             />
             <p class="small">
-              Download maps and guides for offline use—never get lost, even
+              Download maps and guides for offline use never get lost, even
               without internet.
             </p>
           </div>
@@ -138,7 +136,7 @@
                 minutes.
               </p>
             </div>
-            <button class="btn btn-outline-light btn-lg mt-5">Start Planning</button>
+            <button class="btn btn-outline-light btn-lg mt-3 mt-lg-0">Start Planning</button>
           </div>
         </div>
       </section>
